<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/welcome"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:text="@string/pleaseSignIn"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/custom_card">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_horizontal_rule_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/ETEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/ETPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ETEmail" />

                <Button
                    android:id="@+id/BtnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/SignIn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ETPassword" />

                <TextView
                    android:id="@+id/tvSeparator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Or"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/BtnSignIn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BtnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/SignUp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSeparator" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>